--- a/index.htm
+++ b/index.htm
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafe Menu</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="menu">
         <main>
           <h1>CAMPER CAFE</h1>
-          <p class="established">Est. 2020</p>
+          <p class="established">Est. 2024</p>
           <hr>
           <section>
             <h2>Coffee</h2>
